# webshow

./: .dir-locals.el  LICENSE  README.md  dev.sh  webshow.cabal  webshow.css
app/: Main.hs
