name:                webshow
version:             0.0.0
synopsis:            Show programming language printed values in a web UI
description:         Show programming language printed values in a web UI. Supports Haskell Show values only at the moment.
homepage:            https://github.com/chrisdone/webshow#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable webshow
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , warp
                     , wai
                     , http-types
                     , pretty-show
                     , directory
                     , optparse-simple
                     , optparse-applicative
                     , lucid
                     , hscolour
                     , filepath
                     , text
                     , file-embed
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/webshow
